refactor: service proto and server registers
